feat(repl): auto-locate Surefire fork; refresh CLAUDE.md for the new architecture
REPL ergonomics:
- Auto-locate the testorder-fork extension from ~/.m2 (Csto2.defaultSurefireExt),
  so --surefire-ext is no longer required when the fork is installed.
- REPL reports Surefire-fork + agent availability on launch and in `state`.
- Drop the dead `jfr` toggle (the agent always records JFR now).

CLAUDE.md: rewrite the dynamic-half section (Surefire + agent, TestDiscovery) and the
build/pipeline/flags/artifacts sections to match the retired-TraceRunner architecture.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>